Add docker-regis maven-public repository for dependencies resolution

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,13 @@ repositories {
     mavenLocal()
     mavenCentral()
     maven {
+        url "https://docker-regis-adm.iex.ec/repository/maven-public/"
+        credentials {
+            username nexusUser
+            password nexusPassword
+        }
+    }
+    maven {
         url "https://nexus.intra.iex.ec/repository/maven-public/"
     }
 
@@ -150,8 +157,8 @@ publishing {
     repositories {
         maven {
             credentials {
-                username project.hasProperty('nexusUser') ? nexusUser : ''
-                password project.hasProperty('nexusPassword') ? nexusPassword : ''
+                username nexusUser
+                password nexusPassword
             }
             url project.hasProperty('nexusUrl') ? nexusUrl : ''
         }
