Define gitBranch value only if it does not exist

--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,13 @@ targetCompatibility = 11
 ext {
     springCloudVersion = '2021.0.0'
     mongockVersion = '4.2.7.BETA'
-    gitBranch = 'git rev-parse --abbrev-ref HEAD'.execute().text.trim()
 }
 
-if (gitBranch != 'main' && gitBranch != 'master' && ! (gitBranch ==~ '(release|hotifx|support)/.*')) {
+if (!project.hasProperty('gitBranch')) {
+    ext.gitBranch = 'git rev-parse --abbrev-ref HEAD'.execute().text.trim()
+}
+
+if (gitBranch != 'main' && gitBranch != 'master' && ! (gitBranch ==~ '(release|hotfix|support)/.*')) {
     version += '-NEXT-SNAPSHOT'
 }
 
