Use iexec-common version 6.2.0-rc1

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version=7.2.1
-iexecCommonVersion=6.1.0
+iexecCommonVersion=6.2.0-rc1
 iexecBlockchainAdapterVersion=7.1.1
 iexecResultVersion=7.1.0
 iexecSmsVersion=7.1.0
