--- a/build.gradle
+++ b/build.gradle
@@ -70,9 +70,9 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-hateoas"
 
     // NoSuchMethodError: 'okhttp3.RequestBody okhttp3.RequestBody.create(java.lang.String, okhttp3.MediaType)'
-    implementation 'com.squareup.okhttp3:okhttp:4.3.1' // Web3j issue: https://github.com/web3j/web3j/issues/1180
-    // NoSuchMethodError: 'byte[] kotlin.collections.ArraysKt.copyInto(byte[], byte[], int, int, int)'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.50' // https://stackoverflow.com/a/57907899
+    // Spring Boot dependencies BOM enforces okhttp3 3.14.9 in 2.6.X
+    // It is required to define the dependency version required by web3j until migration to at least Spring Boot 2.7.X
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0' // Web3j issue: https://github.com/web3j/web3j/issues/1180
 
     testImplementation "org.springframework.boot:spring-boot-starter-test"
 
