--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'eclipse'
+    id 'io.freefair.lombok' version '6.6.1'
     id 'jacoco'
     id 'org.sonarqube' version '3.3'
     id 'maven-publish'
@@ -94,12 +94,6 @@ dependencies {
     implementation 'biz.paluch.logging:logstash-gelf:1.5.1'
 
     implementation 'io.micrometer:micrometer-registry-prometheus:1.8.1'
-
-    // lombok
-    compileOnly "org.projectlombok:lombok:1.18.2"
-    annotationProcessor "org.projectlombok:lombok:1.18.2"
-    testCompileOnly "org.projectlombok:lombok:1.18.2"
-    testAnnotationProcessor "org.projectlombok:lombok:1.18.2"
 
     // mongock
     implementation "com.github.cloudyrock.mongock:mongock-spring-v5:${mongockVersion}"
