--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
     id 'java'
     id 'io.freefair.lombok' version '6.6.1'
+    id 'org.springframework.boot' version '2.6.2'
+    id 'io.spring.dependency-management' version '1.1.0'
     id 'jacoco'
     id 'org.sonarqube' version '3.3'
     id 'maven-publish'
-    id "org.springframework.boot" version "2.6.2"
-    id "io.spring.dependency-management" version "1.0.11.RELEASE"
 }
 
 group = 'com.iexec.core'
