Show application version on banner

--- a/build.gradle
+++ b/build.gradle
@@ -122,6 +122,13 @@ springBoot {
     buildInfo()
 }
 
+tasks.named("bootJar") {
+    manifest {
+        attributes("Implementation-Title": "iExec Core Scheduler",
+                   "Implementation-Version": project.version)
+    }
+}
+
 test {
     useJUnitPlatform()
 }
@@ -146,7 +153,7 @@ tasks.sonarqube.dependsOn tasks.jacocoTestReport
 publishing {
     publications {
         maven(MavenPublication) {
-            artifact bootJar
+            artifact tasks.named("bootJar")
             from components.java
         }
     }
