--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version=7.3.1
-iexecCommonVersion=6.2.1-NEXT-SNAPSHOT
+iexecCommonVersion=7.0.0
 iexecBlockchainAdapterVersion=7.3.0-NEXT-SNAPSHOT
 iexecResultVersion=7.3.0-NEXT-SNAPSHOT
 iexecSmsVersion=7.3.0-NEXT-SNAPSHOT
