Init release candidate

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-version=7.3.1
+version=8.0.0-rc0
 iexecCommonVersion=7.0.0
-iexecBlockchainAdapterVersion=7.3.0-NEXT-SNAPSHOT
-iexecResultVersion=7.3.0-NEXT-SNAPSHOT
-iexecSmsVersion=7.3.0-NEXT-SNAPSHOT
+iexecBlockchainAdapterVersion=8.0.0
+iexecResultVersion=8.0.0
+iexecSmsVersion=8.0.0
 
 nexusUser
 nexusPassword
