--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 version=8.0.1
 iexecCommonVersion=8.0.0
+iexecCommonsPocoVersion=1.0.2
 iexecBlockchainAdapterVersion=8.0.0
 iexecResultVersion=8.0.0
 iexecSmsVersion=8.0.0
