Update Replicate Statuses transitions

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 version=8.0.1
-iexecCommonVersion=8.0.0
-iexecCommonsPocoVersion=1.0.2
+iexecCommonVersion=8.0.0-NEXT-SNAPSHOT
+iexecCommonsPocoVersion=1.0.2-NEXT-SNAPSHOT
 iexecBlockchainAdapterVersion=8.0.1-NEXT-SNAPSHOT
 iexecResultVersion=8.0.0-NEXT-SNAPSHOT
 iexecSmsVersion=8.0.0-NEXT-SNAPSHOT
