Use iexec-commons-poco@2.0.0 and iexec-common@8.1.0-NEXT-SNAPSHOT

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 version=8.0.1
-iexecCommonVersion=8.0.0-NEXT-SNAPSHOT
-iexecCommonsPocoVersion=1.0.2-NEXT-SNAPSHOT
+iexecCommonVersion=8.1.0-NEXT-SNAPSHOT
+iexecCommonsPocoVersion=2.0.0
 iexecBlockchainAdapterVersion=8.0.1-NEXT-SNAPSHOT
 iexecResultVersion=8.0.0-NEXT-SNAPSHOT
 iexecSmsVersion=8.0.0-NEXT-SNAPSHOT
