Use iexec-commons-poco@3.0.2 and iexec-commons@8.2.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 version=8.0.1
-iexecCommonVersion=8.1.0-NEXT-SNAPSHOT
-iexecCommonsPocoVersion=2.0.1-NEXT-SNAPSHOT
+iexecCommonVersion=8.2.0
+iexecCommonsPocoVersion=3.0.2
 iexecBlockchainAdapterVersion=8.0.1-NEXT-SNAPSHOT
 iexecResultVersion=8.0.0-NEXT-SNAPSHOT
 iexecSmsVersion=8.0.0-NEXT-SNAPSHOT
