--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -77,6 +77,9 @@ management:
         # or:
         # *
         include: ${IEXEC_CORE_MANAGEMENT_ACTUATORS:health, info}
+  endpoint:
+    health:
+      show-details: always  # Show all details of HealthIndicators
 
 graylog:
   host: ${IEXEC_CORE_GRAYLOG_HOST:localhost}
