--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'java'
     id 'io.freefair.lombok' version '6.6.1'
-    id 'org.springframework.boot' version '2.6.14'
-    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.springframework.boot' version '2.7.14'
+    id 'io.spring.dependency-management' version '1.1.3'
     id 'jacoco'
     id 'org.sonarqube' version '3.3'
     id 'maven-publish'
@@ -11,7 +11,7 @@ plugins {
 group = 'com.iexec.core'
 
 ext {
-    springCloudVersion = '2021.0.5'
+    springCloudVersion = '2021.0.8'
     jjwtVersion = '0.11.5'
     mongockVersion = '4.2.7.BETA'
 }
@@ -64,18 +64,13 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation "org.springframework.retry:spring-retry"
 
-    // apache commons.lang3
-    implementation 'org.apache.commons:commons-lang3'
-
-    // NoSuchMethodError: 'okhttp3.RequestBody okhttp3.RequestBody.create(java.lang.String, okhttp3.MediaType)'
-    // Spring Boot dependencies BOM enforces okhttp3 3.14.9 in 2.6.X
-    // It is required to define the dependency version required by web3j until migration to at least Spring Boot 2.7.X
-    implementation 'com.squareup.okhttp3:okhttp:4.9.0' // Web3j issue: https://github.com/web3j/web3j/issues/1180
-
     // Spring Doc
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.3'
 
-    // jason web token
+    // apache commons.lang3
+    implementation 'org.apache.commons:commons-lang3'
+
+    // json web token
     implementation "io.jsonwebtoken:jjwt-api:$jjwtVersion"
     runtimeOnly "io.jsonwebtoken:jjwt-impl:$jjwtVersion"
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:$jjwtVersion"
