--- a/build.gradle
+++ b/build.gradle
@@ -130,7 +130,7 @@ test {
     useJUnitPlatform()
 }
 
-task itest {
+tasks.register('itest') {
     group 'Verification'
     description 'Runs the integration tests.'
 }
@@ -169,7 +169,7 @@ ext.jarPathForOCI  = relativePath(tasks.bootJar.outputs.files.singleFile)
 ext.gitShortCommit = 'git rev-parse --short=8 HEAD'.execute().text.trim()
 ext.ociImageName   = 'local/' + ['bash', '-c', 'basename $(git config --get remote.origin.url) .git'].execute().text.trim()
 
-task buildImage(type: Exec) {
+tasks.register('buildImage', Exec) {
     group 'Build'
     description 'Builds an OCI image from a Dockerfile.'
     dependsOn bootJar
