--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,6 @@ plugins {
     id 'maven-publish'
 }
 
-group = 'com.iexec.core'
-
 ext {
     springCloudVersion = '2021.0.8'
     jjwtVersion = '0.11.5'
@@ -21,21 +19,28 @@ if (!project.hasProperty('gitBranch')) {
     ext.gitBranch = 'git rev-parse --abbrev-ref HEAD'.execute().text.trim()
 }
 
-if (gitBranch != 'main' && gitBranch != 'master' && ! (gitBranch ==~ '(release|hotfix|support)/.*')) {
-    version += '-NEXT-SNAPSHOT'
-}
-
-repositories {
-    mavenLocal()
-    mavenCentral()
-    maven {
-        url "https://docker-regis-adm.iex.ec/repository/maven-public/"
-        credentials {
-            username nexusUser
-            password nexusPassword
+allprojects {
+    group = 'com.iexec.core'
+    if (gitBranch != 'main' && gitBranch != 'master' && !(gitBranch ==~ '(release|hotfix|support)/.*')) {
+        version += '-NEXT-SNAPSHOT'
+    }
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        maven {
+            url "https://docker-regis-adm.iex.ec/repository/maven-public/"
+            credentials {
+                username nexusUser
+                password nexusPassword
+            }
+        }
+        maven { url "https://jitpack.io" }
+    }
+    java {
+        toolchain {
+            languageVersion.set(JavaLanguageVersion.of(11))
         }
     }
-    maven { url "https://jitpack.io" }
 }
 
 dependencyManagement {
@@ -102,12 +107,6 @@ dependencies {
     // mongo
     testImplementation "org.testcontainers:junit-jupiter:$testContainersVersion"
     testImplementation "org.testcontainers:mongodb:$testContainersVersion"
-}
-
-java {
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(11))
-    }
 }
 
 jar {
