Move first DTO classes to `iexec-core-library` sub-project

--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation "com.iexec.blockchain:iexec-blockchain-adapter-api-library:$iexecBlockchainAdapterVersion"
     implementation "com.iexec.result-proxy:iexec-result-proxy-library:$iexecResultVersion"
     implementation "com.iexec.sms:iexec-sms-library:$iexecSmsVersion"
+    implementation project(':iexec-core-library')
 
     // spring
     implementation "org.springframework.boot:spring-boot-starter"
