--- a/iexec-core-library/build.gradle
+++ b/iexec-core-library/build.gradle
@@ -13,6 +13,8 @@ dependencies {
 }
 
 java {
+    sourceCompatibility = "11"
+    targetCompatibility = "11"
     withJavadocJar()
     withSourcesJar()
 }
