Removing default prometheus endpoint activation

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -80,7 +80,7 @@ management:
         # health, info, httptrace
         # or:
         # *
-        include: ${IEXEC_CORE_MANAGEMENT_ACTUATORS:health, info, metrics}
+        include: ${IEXEC_CORE_MANAGEMENT_ACTUATORS:health, info}
   endpoint:
     health:
       show-details: always  # Show all details of HealthIndicators
