Use `BlockchainAdapterService` from `iexec-blockchain-adapter-api-library`

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 version=8.2.0
 iexecCommonVersion=8.3.0
 iexecCommonsPocoVersion=3.1.0
-iexecBlockchainAdapterVersion=8.2.0
+iexecBlockchainAdapterVersion=8.2.0-NEXT-SNAPSHOT
 iexecResultVersion=8.2.0
 iexecSmsVersion=8.3.0
 
