--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 version=8.2.3
 iexecCommonVersion=8.3.1
 iexecCommonsPocoVersion=3.2.0
-iexecBlockchainAdapterVersion=8.2.0-NEXT-SNAPSHOT
-iexecResultVersion=8.2.0
-iexecSmsVersion=8.3.0
+iexecBlockchainAdapterVersion=8.3.0
+iexecResultVersion=8.3.0
+iexecSmsVersion=8.4.0
 
 nexusUser
 nexusPassword
