--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ iexecCommonVersion=8.4.0
 iexecCommonsPocoVersion=3.2.0
 iexecBlockchainAdapterVersion=8.4.0
 iexecResultVersion=8.4.0
-iexecSmsVersion=8.5.0-NEXT-SNAPSHOT
+iexecSmsVersion=8.5.1
 
 nexusUser
 nexusPassword
