--- a/iexec-core-library/build.gradle
+++ b/iexec-core-library/build.gradle
@@ -8,8 +8,6 @@ plugins {
 dependencies {
     implementation "com.iexec.commons:iexec-commons-poco:$iexecCommonsPocoVersion"
     implementation "com.iexec.common:iexec-common:$iexecCommonVersion"
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 java {
@@ -19,10 +17,19 @@ java {
     withSourcesJar()
 }
 
+testing {
+    suites {
+        test {
+            useJUnitJupiter()
+            dependencies {
+                implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+            }
+        }
+    }
+}
 
 tasks.withType(Test).configureEach {
     finalizedBy tasks.jacocoTestReport
-    useJUnitPlatform()
 }
 
 // sonarqube code coverage requires jacoco XML report
@@ -44,7 +51,7 @@ publishing {
                 username nexusUser
                 password nexusPassword
             }
-            url = project.hasProperty("nexusUrl")? project.nexusUrl: ''
+            url = project.hasProperty("nexusUrl") ? project.nexusUrl : ''
         }
     }
 }
