--- a/iexec-core-library/build.gradle
+++ b/iexec-core-library/build.gradle
@@ -8,6 +8,8 @@ plugins {
 dependencies {
     implementation "com.iexec.commons:iexec-commons-poco:$iexecCommonsPocoVersion"
     implementation "com.iexec.common:iexec-common:$iexecCommonVersion"
+    // TODO remove this later when migration has been done
+    implementation project(':iexec-task-feedback-api')
 }
 
 java {
