--- a/iexec-core-library/build.gradle
+++ b/iexec-core-library/build.gradle
@@ -9,7 +9,7 @@ dependencies {
     implementation "com.iexec.commons:iexec-commons-poco:$iexecCommonsPocoVersion"
     implementation "com.iexec.common:iexec-common:$iexecCommonVersion"
     // TODO remove this later when migration has been done
-    implementation project(':iexec-task-feedback-api')
+    implementation project(':iexec-task-api')
 }
 
 java {
