--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name = 'iexec-core'
-include 'iexec-core-library', 'iexec-task-feedback-api'
+include 'iexec-core-library', 'iexec-task-api'
