--- a/iexec-core-library/build.gradle
+++ b/iexec-core-library/build.gradle
@@ -25,6 +25,7 @@ testing {
             useJUnitJupiter()
             dependencies {
                 implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+                implementation 'org.assertj:assertj-core:3.22.0'
             }
         }
     }
