Create a `ConfigServerClient` instance and use it

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,8 @@
 version=8.4.1
-iexecCommonVersion=8.4.0
+iexecCommonVersion=8.4.0-NEXT-SNAPSHOT
 iexecCommonsPocoVersion=3.2.0
 iexecBlockchainAdapterVersion=8.4.0
 iexecResultVersion=8.4.0
 iexecSmsVersion=8.5.1
-
 nexusUser
 nexusPassword
