Replace `CredentialsService` with `SignerService`

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 version=8.4.1
 iexecCommonVersion=8.4.0-NEXT-SNAPSHOT
-iexecCommonsPocoVersion=3.2.0
+iexecCommonsPocoVersion=4.0.0-NEXT-SNAPSHOT
 iexecBlockchainAdapterVersion=8.4.0
 iexecResultVersion=8.4.0
 iexecSmsVersion=8.5.1
