Update iExec libraries

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 version=8.4.1
-iexecCommonVersion=8.4.0-NEXT-SNAPSHOT
-iexecCommonsPocoVersion=4.0.0-NEXT-SNAPSHOT
-iexecBlockchainAdapterVersion=8.4.0
-iexecResultVersion=8.4.0
-iexecSmsVersion=8.5.1
+iexecCommonVersion=8.5.0
+iexecCommonsPocoVersion=4.1.0
+iexecBlockchainAdapterVersion=8.5.0
+iexecResultVersion=8.5.0
+iexecSmsVersion=8.6.0
 nexusUser
 nexusPassword
