Push scheduler Result Proxy as Web2 secret to SMS

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@ iexecCommonVersion=8.5.0
 iexecCommonsPocoVersion=4.1.0
 iexecBlockchainAdapterVersion=8.5.0
 iexecResultVersion=8.5.0
-iexecSmsVersion=8.6.0
+iexecSmsVersion=8.6.0-NEXT-SNAPSHOT
 nexusUser
 nexusPassword
