--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 version=8.5.0
 iexecCommonVersion=8.5.0
-iexecCommonsPocoVersion=4.1.0
+iexecCommonsPocoVersion=4.1.0-NEXT-SNAPSHOT
 iexecBlockchainAdapterVersion=8.5.0
 iexecResultVersion=8.5.0
 iexecSmsVersion=8.6.0-NEXT-SNAPSHOT
