Update iExec libraries

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 version=8.5.0
-iexecCommonVersion=8.5.0
-iexecCommonsPocoVersion=4.1.0-NEXT-SNAPSHOT
-iexecBlockchainAdapterVersion=8.5.0
-iexecResultVersion=8.5.0
-iexecSmsVersion=8.6.0-NEXT-SNAPSHOT
+iexecCommonsPocoVersion=4.2.0
+iexecCommonVersion=8.6.0
+iexecBlockchainAdapterVersion=8.6.0
+iexecResultVersion=8.6.0
+iexecSmsVersion=8.7.0
 nexusUser
 nexusPassword
