Update dependencies and project compatibility to Java 17

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,13 +8,13 @@ spring:
       host: ${MONGO_HOST:localhost}
       port: ${MONGO_PORT:13002}
       auto-index-creation: true # Auto-index creation is disabled by default starting with Spring Data MongoDB 3.x.
-  config.import: "configserver:${IEXEC_PLATFORM_REGISTRY:http://localhost:8888}" # configserver:http://platform-registry:8888
+  config.import: "optional:configserver:${IEXEC_PLATFORM_REGISTRY:http://localhost:8888}" # configserver:http://platform-registry:8888
   cloud.config:
     profile: ${IEXEC_PLATFORM_REGISTRY_STACK:} # mainnet, bellecour3, 1234, ..
     label: ${IEXEC_PLATFORM_REGISTRY_LABEL:} # main, develop, v10, 07998be
 mongock:
   runner-type: InitializingBean
-  change-logs-scan-package:
+  migration-scan-package:
     - com.iexec.core.configuration
 
 cron:
