--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 version=8.6.0
-iexecCommonsPocoVersion=4.2.0
-iexecCommonVersion=8.6.0
+iexecCommonsPocoVersion=4.2.0-NEXT-SNAPSHOT
+iexecCommonVersion=8.6.0-NEXT-SNAPSHOT
 iexecBlockchainAdapterVersion=8.6.0
 iexecResultVersion=8.6.0
 iexecSmsVersion=8.7.0
