--- a/iexec-task-api/build.gradle
+++ b/iexec-task-api/build.gradle
@@ -5,7 +5,13 @@ plugins {
     id 'maven-publish'
 }
 
+ext {
+    springBootVersion = '3.0.13'
+}
+
 dependencies {
+    implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+    
     implementation "com.iexec.commons:iexec-commons-poco:$iexecCommonsPocoVersion"
     implementation "com.iexec.common:iexec-common:$iexecCommonVersion"
 }
