--- a/iexec-core-library/build.gradle
+++ b/iexec-core-library/build.gradle
@@ -6,6 +6,8 @@ plugins {
 }
 
 dependencies {
+    implementation platform("org.springframework.boot:spring-boot-dependencies:3.0.13")
+
     implementation "com.iexec.commons:iexec-commons-poco:$iexecCommonsPocoVersion"
     implementation "com.iexec.common:iexec-common:$iexecCommonVersion"
     // TODO remove this later when migration has been done
@@ -13,8 +15,8 @@ dependencies {
 }
 
 java {
-    sourceCompatibility = "11"
-    targetCompatibility = "11"
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
     withJavadocJar()
     withSourcesJar()
 }
@@ -24,8 +26,7 @@ testing {
         test {
             useJUnitJupiter()
             dependencies {
-                implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-                implementation 'org.assertj:assertj-core:3.22.0'
+                implementation 'org.assertj:assertj-core'
             }
         }
     }
