--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,7 +51,7 @@ wallet:
   password: ${IEXEC_CORE_WALLET_PASSWORD:whatever}
 
 chain:
-  private-address: ${IEXEC_PRIVATE_CHAIN_ADDRESS:http://localhost:8545}
+  node-address: ${IEXEC_PRIVATE_CHAIN_ADDRESS:http://localhost:8545}
   pool-address: ${POOL_ADDRESS:0x365E7BABAa85eC61Dffe5b520763062e6C29dA27}
   start-block-number: ${IEXEC_START_BLOCK_NUMBER:0}
   gas-price-multiplier: ${IEXEC_GAS_PRICE_MULTIPLIER:1.0} # txs will be sent with networkGasPrice*gasPriceMultiplier, 4.0 means super fast
@@ -93,5 +93,5 @@ logs:
   availability-period-in-days: ${IEXEC_LOGS_AVAILABILITY_PERIOD_IN_DAYS:3}
 
 springdoc:
-  packagesToScan: com.iexec.core
-  pathsToMatch: /**
+  packages-to-scan: com.iexec.core
+  paths-to-match: /**
