--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,8 +51,8 @@ wallet:
   password: ${IEXEC_CORE_WALLET_PASSWORD:whatever}
 
 chain:
-  node-address: ${IEXEC_PRIVATE_CHAIN_ADDRESS:http://localhost:8545}
-  pool-address: ${POOL_ADDRESS:0x365E7BABAa85eC61Dffe5b520763062e6C29dA27}
+  node-address: ${IEXEC_BLOCKCHAIN_NODE_ADDRESS:http://localhost:8545}
+  pool-address: ${IEXEC_POOL_ADDRESS:0x365E7BABAa85eC61Dffe5b520763062e6C29dA27}
   start-block-number: ${IEXEC_START_BLOCK_NUMBER:0}
   gas-price-multiplier: ${IEXEC_GAS_PRICE_MULTIPLIER:1.0} # txs will be sent with networkGasPrice*gasPriceMultiplier, 4.0 means super fast
   gas-price-cap: ${IEXEC_GAS_PRICE_CAP:22000000000} #in Wei, will be used for txs if networkGasPrice*gasPriceMultiplier > gasPriceCap
