Update iExec libraries

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 version=8.6.0
-iexecCommonsPocoVersion=4.2.0-NEXT-SNAPSHOT
-iexecCommonVersion=8.6.0-NEXT-SNAPSHOT
-iexecBlockchainAdapterVersion=8.6.0-NEXT-SNAPSHOT
-iexecResultVersion=8.6.0-NEXT-SNAPSHOT
-iexecSmsVersion=8.7.0-NEXT-SNAPSHOT
+iexecCommonsPocoVersion=5.0.0
+iexecCommonVersion=9.0.0
+iexecBlockchainAdapterVersion=9.0.0
+iexecResultVersion=9.0.0
+iexecSmsVersion=9.0.0
 nexusUser
 nexusPassword
