--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
+# x-release-please-start-version
 version=9.0.0
+# x-release-please-end
 iexecCommonsPocoVersion=5.0.0
 iexecCommonVersion=9.0.0
 iexecBlockchainAdapterVersion=9.0.0
